[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/backgrounds/build_gui_bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/GUI/Button/BaseButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GUI/PriceTag.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/GUI/Research/UpgradeMenu.gd" type="Script" id=4]

[node name="UpgradeMenu" type="Panel"]
self_modulate = Color( 0, 0, 0, 0.588235 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -250.0
margin_right = 450.0
margin_bottom = 250.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrade_gui_bg" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 449.997, 249.628 )
scale = Vector2( 1.20169, 0.999961 )
texture = ExtResource( 1 )

[node name="ArmorUpgrade" parent="." instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 716.798
margin_top = 90.7465
margin_right = 816.798
margin_bottom = 190.747
rect_scale = Vector2( 0.5, 0.5 )
cooldown = 1.0
texture_path = "res://assets/icons/armor_plus.png"
desciption = "Health+1"
show_desc = false

[node name="PriceTag" parent="ArmorUpgrade" instance=ExtResource( 3 )]
margin_right = 69.0
margin_bottom = 43.0
text = "50"

[node name="FireUpgrade" parent="." instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 481.199
margin_top = 380.271
margin_right = 581.199
margin_bottom = 480.271
rect_scale = Vector2( 0.5, 0.5 )
cooldown = 4.0
texture_path = "res://assets/icons/cannon_shot_plus.png"
desciption = "Damage+1"
show_desc = false
cost = 200

[node name="PriceTag" parent="FireUpgrade" instance=ExtResource( 3 )]
margin_right = 69.0
margin_bottom = 43.0
text = "200"

[node name="SpeedUpgrade" parent="." instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 447.827
margin_top = 252.658
margin_right = 547.828
margin_bottom = 352.658
rect_scale = Vector2( 0.5, 0.5 )
cooldown = 4.0
texture_path = "res://assets/icons/sail_plus.png"
desciption = "Speed+1"
show_desc = false

[node name="PriceTag" parent="SpeedUpgrade" instance=ExtResource( 3 )]
margin_right = 53.0
margin_bottom = 43.0
text = "200"

[node name="VisibilityUpgrade" parent="." instance=ExtResource( 2 )]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 272.307
margin_top = 175.531
margin_right = 372.307
margin_bottom = 275.531
rect_scale = Vector2( 0.5, 0.5 )
texture_path = "res://assets/icons/crow-nest.png"
desciption = "Watchtower"
show_desc = false

[node name="PriceTag" parent="VisibilityUpgrade" instance=ExtResource( 3 )]
text = "100"

[node name="Toolbar" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="Toolbar" instance=ExtResource( 2 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_top = 5.0
margin_right = 60.0
rect_scale = Vector2( 0.3, 0.3 )
cooldown = 0.0
texture_path = "res://assets/gui/clip.png"
show_desc = false
cost = 0
[connection signal="button_pressed" from="ArmorUpgrade" to="." method="_on_ArmorUpgrade_button_pressed"]
[connection signal="button_pressed" from="FireUpgrade" to="." method="_on_FireUpgrade_button_pressed"]
[connection signal="button_pressed" from="SpeedUpgrade" to="." method="_on_SpeedUpgrade_button_pressed"]
[connection signal="button_pressed" from="VisibilityUpgrade" to="." method="_on_VisibilityButton_button_pressed"]
[connection signal="button_pressed" from="Toolbar/CloseButton" to="." method="_on_CloseButton_button_pressed"]
